-Added Dark Mode: -Refactorised NavBar Component -Changed styles for navbar and footer -Added Sass to skills -corrected scss -organized db

--- a/vuetify-project/src/styles/main.scss
+++ b/vuetify-project/src/styles/main.scss
@@ -20,7 +20,6 @@ body {
     padding-bottom: 4.2rem;
 }
 h1{
-
-    text-decoration: underline; /* Add an underline to the text */
-    text-decoration-color: #007bff;
+    text-decoration: underline;
+    // text-decoration-color: #007bff;
 }
